<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">AGIT</string>
	<string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
	<string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
	<string name="clone_repository">Clone</string>
	<string name="create_repository">Create</string>
	<string name="import_repository">Import</string>
	<string name="add">Add</string>
	<string name="file_not_support">Can not support this type of file</string>
	<string name="project_name">Project Name</string>
	<string name="local_path">Local Path</string>
	<string name="browse">BROWSE</string>
	<string name="clone_url">Clone URL</string>
	<string name="edt_blank_err">This field cannot be empty</string>
	<string name="message_clone_process">Cloning repository, please wait...</string>
	<string name="message_clone_success">Cloning Success</string>
	<string name="err_message">An error occured. Please try it later.</string>
	<string name="err_not_directory">Local Path is not a directory</string>
	<string name="err_when_clone">There are some errors occuring while cloning. Please try it later.</string>
	<string name="err_fail_create_directory">There are some errors occuring while creating directory. Check if the dierctory is writable.</string>
	<string name="err_directory_exists">The direcotory has already exists</string>
	<string name="err_no_internet">Please check your Internet state</string>
	<string name="create_repository_success">Git init success</string>
	<string name="repository_tab_title_file">Files</string>
	<string name="repository_tab_title_commit">Commits (%1$d)</string>
	<string name="commit_success">Commit Success</string>
	<string name="commit_fail">Commit Fail</string>
	<string name="commit">Commit</string>
	<string name="commit_message">Commit Message</string>
	<string name="pick_author">Pick an Author</string>
	<string name="commit_add_all">Add all to stage before commit</string>
	<string name="advanced_option">Advanced Options</string>
	<string name="pick_committer_optional">Pick a Committer (Optional)</string>
	<string name="pick_committer">Pick a Committer</string>
	<string name="add_new_people">Add new people</string>
	<string name="full_name">Full Name</string>
	<string name="email">Email</string>
	<string name="add_people">Add People</string>
	<string name="edit_people">Edit People</string>
	<string name="push">Push</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="save_username_and_password">Save username and password</string>
	<string name="ignore_auth">Ignore Authentication</string>
	<string name="auth">Authentication</string>
	<string name="push_all_branches">Push all branches</string>
	<string name="choose_remote">Choose Remote</string>
	<string name="push_success">Push Success</string>
	<string name="add_remote">Add remote</string>
	<string name="name">Name</string>
	<string name="url">URL</string>
	<string name="search_language_hint">Search a language</string>
	<string name="choose_language">Choose a language</string>
	<string name="add_language">Add language</string>
	<string name="gitignore_exists">.gitignore has already existed</string>
	<string name="gitignore_successfully_created">.gitignore has successfully been created</string>
	<string name="add_gitignore">Add .gitignore:\u0020</string>
	<string name="none">None</string>
	<string name="push_result_awaiting_report">[%1$s] Push process is awaiting update report from remote repository.\n</string>
	<string name="push_result_non_existing">[%1$s] Remote ref didn\'t exist.\n</string>
	<string name="push_result_not_attempted">[%1$s] Push process hasn\'t yet attempted to update this ref.\n</string>
	<string name="push_result_ok">[%1$s] Success push to remote ref.\n</string>
	<string name="push_result_rejected_nodelete">[%1$s] Remote ref update was rejected, because remote side doesn\'t support/allow deleting refs.\n</string>
	<string name="push_result_rejected_nonfastforward">[%1$s] Remote ref update was rejected, as it would cause non fast-forward update.\n</string>
	<string name="push_result_rejected_other_reason">[%1$s] Remote ref update was rejected.\n</string>
	<string name="push_reslut_rejected_other_message">[%1$s] Remote ref update was rejected, because %2$s.\n</string>
	<string name="push_result_rejected_remote_changed">[%1$s] Remote ref update was rejected, because old object id on remote repository wasn\'t the same as defined expected old object.\n</string>
	<string name="push_result_up_to_date">[%1$s] remote ref is up to date.\n</string>
	<string name="repository_import_err">Can\'t find the git repository, please create a new one</string>
	<string name="fetch">Fetch</string>
	<string name="fetch_result_fast_forward">[%1$s] The ref was updated/deleted in a fast-forward way.</string>
	<string name="fetch_result_forced">[%1$s] The ref had to be forcefully updated/deleted.</string>
	<string name="fetch_result_io_failure">[%1$s] The ref was probably not updated/deleted because of I/O error.</string>
	<string name="fetch_result_lock_failure">[%1$s] The ref could not be locked for update/delete.</string>
	<string name="fetch_result_new">[%1$s] The ref was created locally for an update, but ignored for delete.</string>
	<string name="fetch_result_no_change">[%1$s] Same value already stored.</string>
	<string name="fetch_result_not_attempted">[%1$s] The ref update/delete has not been attempted by the caller.</string>
	<string name="fetch_result_rejected">[%1$s] Not a fast-forward and not stored.</string>
	<string name="fetch_result_rejected_current_branch">[%1$s] Rejected because trying to delete the current branch.</string>
	<string name="fetch_result_renamed">[%1$s] The ref was renamed from another name</string>
	<string name="pull">Pull</string>
	<string name="pull_result">Pull result:\u020</string>
	<string name="rebase_after_fetch">Rebase after fetch</string>
	<string name="switch_branch">Switch branch</string>
	<string name="branches">Branches</string>
	<string name="tags">Tags</string>
	<string name="create_branch">Create branch</string>
	<string name="merge_branch">Merge Branch</string>
	<string name="merge_branch_commit_hint">Merge commit message (optional)</string>
	<string name="choose_branch">Choose branch</string>
	<string name="merge">Merge</string>
	<string name="fast_forward_merge">Fast-Forward merge</string>
	<string name="delete_branch">Delete branch</string>
	<string name="branch_delete_success">Branch delete success</string>
	<string name="delete">Delete</string>
	<string name="create_tag">Create tag</string>
	<string name="tag_name">Tag name</string>
	<string name="tag_message_optional">Tag message (Optional)</string>
	<string name="create_annotated_tag">Cteate an annotated tag</string>
	<string name="sign_tag">Sign the tag</string>
	<string name="pick_tagger">Pick a tagger</string>
	<string name="tag_created_success">Tag is created successfully</string>
</resources>
