<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/activity_padding">
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/dialogAuthEdtLayUsername"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:theme="@style/AppTheme.TextInputLayout.primary"
		app:errorEnabled="false">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/dialogAuthEdtUsername"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/username"
			android:inputType="text"
			android:singleLine="true" />

	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/dialogAuthEdtLayPassword"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_small"
		app:layout_constraintTop_toBottomOf="@id/dialogAuthEdtLayUsername"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:theme="@style/AppTheme.TextInputLayout.primary"
		app:errorEnabled="false">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/dialogAuthEdtPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/password"
			android:inputType="textPassword"
			android:singleLine="true" />

	</android.support.design.widget.TextInputLayout>
	
	<CheckBox
		style="@style/AppTheme.CheckBox.Primary"
		android:id="@+id/dialogAuthChkSave"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_small"
		android:theme="@style/AppTheme.CheckBox.Primary"
		app:layout_constraintTop_toBottomOf="@id/dialogAuthEdtLayPassword"
		app:layout_constraintLeft_toLeftOf="parent" />
	
	<TextView 
		android:id="@+id/dialogAuthTxtSave"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_small"
		android:text="@string/save_username_and_password"
		app:layout_constraintTop_toTopOf="@id/dialogAuthChkSave"
		app:layout_constraintLeft_toRightOf="@id/dialogAuthChkSave"/>
	
	<CheckBox
		style="@style/AppTheme.CheckBox.Primary"
		android:id="@+id/dialogAuthChkIgnore"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.CheckBox.Primary"
		app:layout_constraintTop_toBottomOf="@id/dialogAuthChkSave"
		app:layout_constraintLeft_toLeftOf="parent" />

	<TextView 
		android:id="@+id/dialogAuthTxtIgnore"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_small"
		android:text="@string/ignore_auth"
		app:layout_constraintTop_toTopOf="@id/dialogAuthChkIgnore"
		app:layout_constraintLeft_toRightOf="@id/dialogAuthChkIgnore"/>
	
</android.support.constraint.ConstraintLayout>
