<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay">

			<ImageView
				android:id="@+id/imgAddRepositorySave"
				android:src="@drawable/ic_done_black_24dp"
				style="@style/AppTheme.ToolbarIndicator.Right"/>

		</android.support.v7.widget.Toolbar>

	</android.support.design.widget.AppBarLayout>

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="@dimen/activity_padding">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/addRepositoryEdtLayName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:theme="@style/AppTheme.TextInputLayout.primary">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/addRepositoryEdtName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/project_name"
				android:inputType="text"
				android:selectAllOnFocus="true"
				android:singleLine="true" />
		</android.support.design.widget.TextInputLayout>
		
		<Button 
			android:id="@+id/addRepositoryBtnBrowse"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/browse"
			app:layout_constraintTop_toBottomOf="@id/addRepositoryEdtLayName"
			app:layout_constraintRight_toRightOf="parent"/>
		
		<android.support.design.widget.TextInputLayout
			android:id="@+id/addRepositoryEdtLayLocation"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/addRepositoryEdtLayName"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@id/addRepositoryBtnBrowse"
			app:theme="@style/AppTheme.TextInputLayout.primary">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/addRepositoryEdtLocation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/local_path"
				android:inputType="text"
				android:selectAllOnFocus="true"
				android:singleLine="true" />
		</android.support.design.widget.TextInputLayout>
		
		<android.support.design.widget.TextInputLayout
			android:id="@+id/addRepositoryEdtLayUrl"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_small"
			android:visibility="gone"
			app:layout_constraintTop_toBottomOf="@+id/addRepositoryEdtLayLocation"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:theme="@style/AppTheme.TextInputLayout.primary">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/addRepositoryEdtUrl"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/clone_url"
				android:inputType="text"
				android:selectAllOnFocus="true"
				android:singleLine="true" />
			
		</android.support.design.widget.TextInputLayout>

	</android.support.constraint.ConstraintLayout>

</LinearLayout>
