<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/activity_padding">
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/dialogTagCreateEdtLayName"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:theme="@style/AppTheme.TextInputLayout.primary"
		app:errorEnabled="false">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/dialogTagCreateEdtName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/tag_name"
			android:inputType="text"
			android:singleLine="true" />

	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/dialogTagCreateEdtLayMessage"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_small"
		app:layout_constraintTop_toBottomOf="@id/dialogTagCreateEdtLayName"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:theme="@style/AppTheme.TextInputLayout.primary"
		app:errorEnabled="false">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/dialogTagCreateEdtLayMessage"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/tag_message_optional"
			android:inputType="text"
			android:singleLine="true" />

	</android.support.design.widget.TextInputLayout>
	
	<LinearLayout
		style="@style/AppTheme.SelectableItem"
		android:id="@+id/dialogTagCreateLayTagger"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/spacing_middle"
		android:paddingBottom="@dimen/spacing_middle"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@id/dialogTagCreateEdtLayMessage"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent">

		<ImageView
			android:id="@+id/dialogTagCreateImgTagger"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_person_black_24dp"
			android:tint="@color/grey600"/>

		<TextView
			android:id="@+id/dialogTagCreateTxtTagger"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/spacing_middle"
			android:text="@string/pick_author"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

	</LinearLayout>

</android.support.constraint.ConstraintLayout>
